add query params to /cards to retrieve card's theme infos
